# multiscale-epithelial-mechanics-PRXLife

./: AUTHORS.md  CMakeLists.txt  INSTALL.md  README.md  userConfig.cmake
ExperimentalResults/: readme.md
matlab/Equibiaxial/: EquiMain.m  ODEequi.m
matlab/Equibiaxial/Eulerian/: EquiMainOsc.m  EquiMainSR.m  EquiODEOsc.m  EquiODESR.m  calculateTensions.m
matlab/Equibiaxial/Lagrangian/: EquiMainOsc.m  EquiMainSR.m  EquiODEOsc.m  EquiODESR.m  Y0_active_eshelby_0p55.mat  Y0_active_eshelby_0p5_5p4801_strain.mat  calculateTensions.m
matlab/LinearStabilityAnalysis/: myLinearDAE5Eqns.m
matlab/PaperData/casares_data/: casares_data_unstretch.csv
matlab/PaperData/khalilgharibi_data/: Khalilgharibi2019_FigS3.csv
matlab/Post-processing/: AnalyzeVTK.m  DomeLaplaceLaw.m  PlotData.m  loadDomeLaplaceLawResults.m  plotAnalyzeVTK_domes.m
matlab/Post-processing/test/: loadDomeLaplaceLawResults2.m
matlab/Uniaxial/: ODEuniaxialCreep.m  ODEuniaxialSR.m  UniaxialMainCreep.m  UniaxialMainSR.m  calculateTensions.m
post-processing/: state.pvsm
simulation/buckling/mesh/: VMconfig.cfg  boxsizedata.txt  celldata.txt  faceIDsinCell.txt  meshinfo.txt  neighbourcells.txt  stimulatedFaceIDs.txt  vertexmesh_0.txt  vertexmesh_1.txt  vertexmesh_10.txt  vertexmesh_100.txt  vertexmesh_1000.txt  vertexmesh_1001.txt  vertexmesh_1002.txt  vertexmesh_1003.txt  vertexmesh_1004.txt  vertexmesh_1005.txt  vertexmesh_1006.txt  vertexmesh_1007.txt  vertexmesh_1008.txt  vertexmesh_1009.txt  vertexmesh_101.txt  vertexmesh_1010.txt  vertexmesh_1011.txt  vertexmesh_1012.txt  vertexmesh_1013.txt  vertexmesh_1014.txt  vertexmesh_1015.txt  vertexmesh_1016.txt  vertexmesh_1017.txt  vertexmesh_1018.txt  vertexmesh_1019.txt  vertexmesh_102.txt  vertexmesh_1020.txt  vertexmesh_1021.txt  vertexmesh_1022.txt  vertexmesh_1023.txt  vertexmesh_1024.txt  vertexmesh_1025.txt  vertexmesh_1026.txt  (+5970 more)
simulation/domes/mesh/: VMconfig.cfg  boxsizedata.txt  celldata.txt  faceIDsinCell.txt  meshinfo.txt  neighbourcells.txt  stimulatedFaceIDs.txt  vertexmesh_0.txt  vertexmesh_1.txt  vertexmesh_10.txt  vertexmesh_100.txt  vertexmesh_1000.txt  vertexmesh_1001.txt  vertexmesh_1002.txt  vertexmesh_1003.txt  vertexmesh_1004.txt  vertexmesh_1005.txt  vertexmesh_1006.txt  vertexmesh_1007.txt  (+1791 more)
simulation/mesh/: VMconfig.cfg  neighbourcells.txt  vertexmesh_10.txt  vertexmesh_100.txt  vertexmesh_1002.txt  vertexmesh_1003.txt  vertexmesh_1004.txt  vertexmesh_1005.txt  vertexmesh_1009.txt  vertexmesh_101.txt  vertexmesh_1011.txt  vertexmesh_1013.txt  vertexmesh_1014.txt  vertexmesh_1016.txt  vertexmesh_102.txt  vertexmesh_1021.txt  vertexmesh_1023.txt  vertexmesh_1024.txt  vertexmesh_1025.txt  vertexmesh_1027.txt  vertexmesh_1028.txt  vertexmesh_1029.txt  vertexmesh_1030.txt  vertexmesh_1031.txt  vertexmesh_1032.txt  vertexmesh_1033.txt  vertexmesh_1035.txt  vertexmesh_104.txt  vertexmesh_1040.txt  vertexmesh_1041.txt  vertexmesh_1044.txt  vertexmesh_1046.txt  vertexmesh_1047.txt  vertexmesh_1049.txt  vertexmesh_1052.txt  vertexmesh_1053.txt  vertexmesh_1056.txt  vertexmesh_1057.txt  vertexmesh_1059.txt  vertexmesh_1060.txt  (+4686 more)
src/: AuxVX.cpp  AuxVX.h  AuxVXDomes.cpp  AuxVXDomes.h  CMakeLists.txt  VX.cpp  VXDomes.cpp
(+5087 files in other folders)
